services drag and drop broadcast receivers

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,6 +143,27 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Notification" />
+
+        <Button
+            android:id="@+id/btnOpenIntenService"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Intent Service" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnOpenDragAndDrop"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Drag And Drop" />
+
     </LinearLayout>
 
 </LinearLayout>
